--- a/root.tex
+++ b/root.tex
@@ -55,15 +55,19 @@ Data-Efficient and Hardware  Decentralized Visual {SLAM}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{abstract}
-
-SLAM is one of the basic task in robot.
-
+\input{src/abstract.tex}
 \end{abstract}
 
+\section{Introduction}
+\input{src/introduction.tex}
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{INTRODUCTION}
-I feel good \cite{Zhan:2018c79}.
+\section{Conclusion}
+\input{src/conclusion.tex}
+
+
+\section*{Acknowledgment}
+\input{src/acknowledgment.tex}
+
 
 \bibliographystyle{IEEEtran}
 \bibliography{src/fpgaslam}
