--- a/root.tex
+++ b/root.tex
@@ -71,6 +71,14 @@ Data-Efficient and Hardware  Decentralized Visual {SLAM}
 \section{Background}
 \input{src/background.tex}
 
+
+\section{Hardware-Software Co-design DSLAM}
+\input{src/hardsoft.tex}
+
+
+\section{Experiments}
+\input{src/experiment.tex}
+
 \section{Conclusion}
 \input{src/conclusion.tex}
 
