--- a/src/introduction.tex
+++ b/src/introduction.tex
@@ -37,7 +37,7 @@ The proposed DSLAM framework is illustrated in \cref{fig:all_us}. To make the DS
     \centering  
     \subfigure[Our hardware-software co-design DSLAM.] {\includegraphics[width=0.95\linewidth]{fig/overview_us.eps}\label{fig:all_us}} 
     \end{minipage}
-    \caption{Overview of the DSLAM in \cite{Cieslewski:20187ee} and our hardware-software co-design DSLAM. Each agent will send the result of 6-D pose estimation and scene descriptor to a server or a central agent to do inter-robot place recognition and optimization. We use CNN instead of feature points to do pose estimation so that we can use CNN accelerator to speed up the whole process.}
+    \caption{Overview of the DSLAM in \cite{Cieslewski:20187ee} and our hardware-software co-design DSLAM. Each agent (blue drones) will send the result of 6-D pose estimation and scene descriptor to a server or a central agent (red server or drone in figure) to do inter-robot place recognition and optimization. We use CNN instead of feature points to do pose estimation so that we can use CNN accelerator to speed up the whole process.}
     \label{fig:overview}
     \end{figure*}
 
